[package]
name = "release"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "5.1.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
chrono = "0.4.35"
zip = { version = "0.6.6", default-features = false }
